@@ -5,7 +5,7 @@
 # The canonical version of this file is maintained in the rra-c-util package,
 # which can be found at <https://www.eyrie.org/~eagle/software/rra-c-util/>.
 #
-# Copyright 2018 Russ Allbery <eagle@eyrie.org>
+# Copyright 2018-2019 Russ Allbery <eagle@eyrie.org>
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
 # copy of this software and associated documentation files (the "Software"),
@@ -27,15 +27,17 @@
 #
 # SPDX-License-Identifier: MIT
 
-use 5.006;
+use 5.008;
 use strict;
 use warnings;
 
 use lib "$ENV{C_TAP_SOURCE}/tap/perl";
 
+use Test::RRA;
+use Test::RRA::Automake qw(automake_setup);
+
 use File::Spec;
 use Test::More;
-use Test::RRA::Automake qw(automake_setup);
 
 # Skip this test if C_TAP_VALGRIND was not set.
 if (!exists $ENV{C_TAP_VALGRIND}) {
@@ -57,16 +59,23 @@ for my $file (@logs) {
     my $path = File::Spec->catfile('tests', 'tmp', 'valgrind', $file);
     open(my $log, '<', $path) or BAIL_OUT("cannot open $path: $!");
     my $okay = 1;
+    my @log;
     while (defined(my $line = <$log>)) {
+        push(@log, $line);
         if ($line =~ m{ ERROR [ ] SUMMARY: [ ] (\d+) [ ] errors }xms) {
             $okay = ($1 == 0);
         }
     }
     close($log) or BAIL_OUT("cannot close $path: $!");
-    ok($okay, $path);
     if ($okay) {
         unlink($path);
+    } else {
+        for my $line (@log) {
+            print '# ', $line
+              or BAIL_OUT("cannot print to standard output: $!");
+        }
     }
+    ok($okay, $path);
 }
 
 # Remove tests/tmp/valgrind if it's now empty.
